--- a/Middleware.GUI/Main.xaml
+++ b/Middleware.GUI/Main.xaml
@@ -24,13 +24,11 @@
                     <Label Content="Unidad de disco seleccionada:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
                     <Label Content="Carpeta Drysoft seleccionada:" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top"/>
                     <Label Content="Conexión a base de datos Drysoft:" HorizontalAlignment="Left" Margin="10,74,0,0" VerticalAlignment="Top"/>
-                    <Label Content="Conexión a base de datos WEB:" HorizontalAlignment="Left" Margin="10,106,0,0" VerticalAlignment="Top"/>
-                    <Label Content="Última sincronización:" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Última sincronización:" HorizontalAlignment="Left" Margin="10,106,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="LblDrive" Content="Placeholder" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="229"/>
                     <Label x:Name="LblDbFolder" Content="Placeholder" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Margin="0,42,10,0" VerticalAlignment="Top" Width="229"/>
                     <Label x:Name="LblFoxProStatus" Content="Placeholder" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Margin="0,74,10,0" VerticalAlignment="Top" Width="229"/>
-                    <Label x:Name="LblOnlineStatus" Content="Placeholder" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Margin="0,106,10,0" VerticalAlignment="Top" Width="229"/>
-                    <Label x:Name="LblLastSync" Content="En espera" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Margin="0,138,10,0" VerticalAlignment="Top" Width="229"/>
+                    <Label x:Name="LblLastSync" Content="Placeholder" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Margin="0,106,10,0" VerticalAlignment="Top" Width="229"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Configuración">
